fixed sentence in 4.1

--- a/paper.tex
+++ b/paper.tex
@@ -1054,12 +1054,13 @@ between injection and cooling,
 \end{equation}
 where we fix the normalisation by requiring $\int_0^{R_{200}}\eps_\rmn{CR,0}
 \rmn{d}V\left(\int_0^{R_{200}}\eps_\rmn{th} \rmn{d}V\right)^{-1} = 0.003$. Note
-that the injected energy in the last 650 Myr is smaller by about a factor of 10
-in comparison to the cumulative CR energy injected over the entire cosmological
-history of the cluster. However, since the individual injection events of CR
-energy are similar, the CRes injected during the merger are especially important
+that the injected {\em CR energy} in the last 650 Myr is smaller by about a
+factor of 10 in comparison to the cumulative CR energy injected over the entire
+cosmological history of the cluster. However, since the injected {\em CR energy
+  rate} averaged over the formation time of the cluster is similar to that
+during a merger, the CRes injected during the merger are especially important
 for the radio emission above 1 GHz since these CRs have not yet had time to
-cool.  Similarly, the initial CRe distribution is given by the steady state
+cool. Similarly, the initial CRe distribution is given by the steady state
 between cooling (Coulomb, inverse Compton, and synchrotron) and injection of
 secondary CRes from $f_\rmn{p,0}$.  The diffusion constant $D_{pp} \propto
 X_{\rm tu}^{2} \eps_{\rm th}^{\alpha_{\rm tu}-1} \sqrt{T} k_L$ is calculated for
